@@ -1,3 +1,6 @@
+* Dialer (ECCP): work around https://bugs.php.net/bug.php?id=41175 which throws
+  a warning on an attempt to set a XML attribute to an empty string. Triggered
+  by a form with an empty description. 
 * Dialer (ECCP): remove bogus copy-paste leftover in form information fetching.
 * Dialer: try harder to find client channel the agent is talking to. Apparently
   OnLink may be received before 'agent status' is properly updated.
